--- a/Starter Code.html
+++ b/Starter Code.html
@@ -97,37 +97,38 @@
     </div>
     <!--The Benefits Start Make to Be on side of the page-->
     <div class="benefits">
-        <div class="benefit-lead">
-            <h3>Lead Generation</h3>
+        <div id="benefit-lead" class="benefit-lead"
+        style="border: groove; background-color: white; text-align: -webkit-auto; display: flex">
             <img src="./assets/images/lead-generation.png" 
             alt="Gear with a pointer down going towards the change symbol"
             style="width: 170px;height:170px;margin-right: 15px;"/>
-            <p>
+            <div><h3>Lead Generation</h3>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
-            </p>
+            </div>
         </div>
-        <div class="benefit-brand">
-            <h3>Brand Awareness</h3>
+        <div id="benefit-brand" class="benefit-brand"
+        style="border: groove; background-color: white; text-align: -webkit-auto; display: flex">
+            
             <img src="./assets/images/brand-awareness.png" 
             alt="Light Bulb looking like a head with signal around it" 
             style="width: 170px;height:170px;margin-right: 15px;"/> 
-            <p>
+            <div><h3>Brand Awareness</h3>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
-            </p>
             </div>
-            <div class="benefit-cost">
+            </div>
+            <div id="benefit" class="benefit-cost" 
+            style="border: groove; background-color: white; text-align: -webkit-auto; display: flex">
             <img src="./assets/images/cost-management.png"
              alt="Gear with Change around it" 
              style="width: 170px;height:170px;margin-right: 15px;"/>
-            <h3>Cost Management</h3>
+           
             </img>
-             <p>
+             <div> <h3>Cost Management</h3>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
-            </p>
-        </div>
+             </div>
     </div>
     <!--Benefits End-->
     <div class="footer">
